[package]
edition = "2021"
name = "napi-module-init-rollback-fixture"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "napi_module_init_rollback_fixture"

[dependencies]
napi = { path = "../../../crates/napi", default-features = false, features = [
  "__internal_test_runtime_cleanup_hook_failure",
  "async-runtime",
  "napi4",
  "tokio_rt",
] }
napi-derive = { path = "../../../crates/macro" }
futures = "0.3"

[build-dependencies]
napi-build = { path = "../../../crates/build" }
