[package]
edition = "2021"
name = "napi-tsfn-retention-fixture"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "napi_tsfn_retention_fixture"

[dependencies]
napi = { path = "../../../crates/napi", default-features = false, features = [
  "napi4",
] }
napi-derive = { path = "../../../crates/macro" }

[build-dependencies]
napi-build = { path = "../../../crates/build" }
